# GTCRN-Micro

./: .gitignore  .pre-commit-config.yaml  EVALUATION_METRICS_README.md  README.md  README_CN.md  compare_models.py  gtcrn_micro.onnx  pyproject.toml  test_model.py
.claude/: settings.local.json
.github/workflows/: build-desktop.yml
basic_C/: CMakeLists.txt  README.md  idf_component.yml.example
basic_C/.claude/: settings.local.json
basic_C/cmake/: gtcrn_micro-config.cmake.in
basic_C/examples/: CMakeLists.txt  esp32_example.c  simple_inference.cpp
basic_C/include/gtcrn_micro/: gtcrn_config.h  gtcrn_engine.h  gtcrn_micro.h  gtcrn_model.h  gtcrn_platform.h  gtcrn_stream.h
basic_C/src/: gtcrn_engine.cpp  gtcrn_model.c  gtcrn_stream.cpp  gtcrn_version.c
basic_C/src/platform/: platform_default.c  platform_esp32.c
docs/: GTCRN-Micro模型测试指南.md  TODO.md  how_to.md  plan.md
docs/AIMade/: PC编译测试报告.md  RT1052部署可行性评估报告.docx  RT1052部署可行性评估报告.md
esp32_SE/main/: gtcrn_micro_int8_data.cc  main.cc
esp32_s3/: README.md
esp32_s3/main/: CMakeLists.txt  main.cc
evaluation/: compare.py
evaluation/comparison_results/: comparison_report.md  detailed_analysis_report.md  evaluation_fullversion.csv
evaluation/output_QAT_Version/: 00005_1_fan_noise_level1_snr+15dB_noisy_enhanced.pkf
gtcrn_micro/: QAT.py  README.md  infer.py  tflite_infer.py
gtcrn_micro/conf/: cfg_train_DNS3.yaml
gtcrn_micro/models/: gtcrn_micro.py  gtcrn_s3.py
gtcrn_micro/models/onnx/: gtcrn_micro.onnx  gtcrn_s3.onnx
gtcrn_micro/models/tflite/: fingerprint.pb  gtcrn_micro_dynamic_range_quant.tflite  gtcrn_micro_float16.tflite  gtcrn_micro_float32.tflite  gtcrn_micro_full_integer_quant.tflite  gtcrn_micro_full_integer_quant_with_int16_act.tflite  gtcrn_micro_integer_quant.tflite  gtcrn_micro_integer_quant_with_int16_act.tflite  gtcrn_s3_dynamic_range_quant.tflite  gtcrn_s3_float16.tflite  gtcrn_s3_float32.tflite  gtcrn_s3_full_integer_quant.tflite  gtcrn_s3_full_integer_quant_with_int16_act.tflite  gtcrn_s3_integer_quant.tflite  gtcrn_s3_integer_quant_with_int16_act.tflite  replace_gtcrn_micro.json  saved_model.pb
gtcrn_micro/models/tflite/variables/: variables.data-00000-of-00001  variables.index
gtcrn_micro/streaming/: gtcrn_micro_stream.py
gtcrn_micro/streaming/conversion/: stream_onnx.py
gtcrn_micro/streaming/onnx/: gtcrn_micro.onnx  gtcrn_micro_stream.onnx  gtcrn_micro_stream_simple.onnx
gtcrn_micro/streaming/tflite/: fingerprint.pb  gtcrn_micro_stream_simple_dynamic_range_quant.tflite  gtcrn_micro_stream_simple_float16.tflite  gtcrn_micro_stream_simple_float32.tflite  replace_gtcrn_micro.json  saved_model.pb
gtcrn_micro/streaming/tflite/variables/: variables.data-00000-of-00001  variables.index
gtcrn_micro/training/: dataloader.py  gen_DNS3_datasets.py  make_DNS3_csvs.py  train.py
gtcrn_micro/utils/: calibration_data.py  dataloader.py  memory_profile.py  output_comparison.py  output_tests.py  quantizer.py  tflite_utils.py  tflite_visualize.py  torch_converter.py
output_dir/: 00006_1_fan_noise_level1_snr+20dB_noisy_enhanced.pkf  00007_1_fan_noise_level2_snr-5dB_noisy_enhanced.pkf  00008_1_fan_noise_level2_snr+0dB_noisy_enhanced.pkf
python/: gtcrn_micro.onnx  pyproject.toml
python/gtcrn_micro/models/: gtcrn_micro.py
python/gtcrn_micro/utils/: torch_converter.py
scripts/: onnx2tf.sh  pull_dns3_data.sh  pull_vctk_data.sh  safety.sh  train.sh
test_wavs/: agc.py
test_wavs/agc_processed/: 00002_1_fan_noise_level1_snr+0dB_noisy.pkf  00003_1_fan_noise_level1_snr+5dB_noisy.pkf  00004_1_fan_noise_level1_snr+10dB_noisy.pkf  00005_1_fan_noise_level1_snr+15dB_noisy.pkf  00017_1_clapping_snr+15dB_noisy.pkf  00025_1_keyboard_loud_snr-5dB_noisy.pkf  00026_1_keyboard_loud_snr+0dB_noisy.pkf  00027_1_keyboard_loud_snr+5dB_noisy.pkf  00028_1_keyboard_loud_snr+10dB_noisy.pkf  00029_1_keyboard_loud_snr+15dB_noisy.pkf  00030_1_keyboard_loud_snr+20dB_noisy.pkf  00031_1_keyboard_soft_snr-5dB_noisy.pkf  00032_1_keyboard_soft_snr+0dB_noisy.pkf  00033_1_keyboard_soft_snr+5dB_noisy.pkf  00034_1_keyboard_soft_snr+10dB_noisy.pkf  00035_1_keyboard_soft_snr+15dB_noisy.pkf  00036_1_keyboard_soft_snr+20dB_noisy.pkf  00049_2_clapping_snr-5dB_noisy.pkf  00050_2_clapping_snr+0dB_noisy.pkf  00051_2_clapping_snr+5dB_noisy.pkf  00052_2_clapping_snr+10dB_noisy.pkf  00053_2_clapping_snr+15dB_noisy.pkf  00054_2_clapping_snr+20dB_noisy.pkf  00071_2_keyboard_soft_snr+15dB_noisy.pkf
test_wavs/input/: 00002.pkf  00003.pkf  00004.pkf  00005.pkf  00006.pkf  00007.pkf  00008.pkf
tests/models/: test_gtcrn_micro.py
